# chaos_raytracing_course_2022

./: CMakeLists.txt  README.md
helpers/: CMakeLists.txt
helpers/cmake/: helpers.cmake
helpers/utils/: CMakeLists.txt  utilsConfig.cmake
helpers/utils/include/utils/: ErrorCode.h
helpers/utils/include/utils/concurrency/: ThreadSafeQueue.h
helpers/utils/include/utils/data_type/: EnumClassUtils.h  FloatingPoint.h
helpers/utils/include/utils/file/: IniFileParser.h  PpmFileWritter.h
helpers/utils/include/utils/geometry/: CoordinateTransform.h  Point2f.h  Ray.h  Triangle.h  Vec3f.h
helpers/utils/include/utils/log/: Log.h
helpers/utils/include/utils/rendering/color/: Color24.h  Color32.h
helpers/utils/include/utils/time/: Time.h
helpers/utils/src/file/: IniFileParser.cpp  PpmFileWritter.cpp
helpers/utils/src/geometry/: CoordinateTransform.cpp  Point2f.cpp  Ray.cpp  Triangle.cpp  Vec3f.cpp
helpers/utils/src/log/: Log.cpp
helpers/utils/src/rendering/color/: Color24.cpp  Color32.cpp
helpers/utils/src/time/: Time.cpp
tasks/: CMakeLists.txt
tasks/02.images_and_colors/: CMakeLists.txt
tasks/02.images_and_colors/crt/: CMakeLists.txt  config.ini
tasks/02.images_and_colors/crt/include/crt/: CrtApplication.h  Dummy.h
tasks/02.images_and_colors/crt/include/crt/config/: CrtConfig.h  CrtConfigLoader.h
tasks/02.images_and_colors/crt/include/crt/defines/: CrtDefines.h
tasks/02.images_and_colors/crt/include/crt/geometry/: PixelRegion.h
tasks/02.images_and_colors/crt/include/crt/geometry/config/: PixelRegionConfig.h
tasks/02.images_and_colors/crt/include/crt/helpers/: CrtTaskDispatcher.h
tasks/02.images_and_colors/crt/include/crt/strategy/: CrtMultipleProducers.h  CrtSingleThread.h  CrtStrategyBase.h  CrtStrategyFactory.h
tasks/02.images_and_colors/crt/include/crt/strategy/config/: StrategyConfig.h
tasks/02.images_and_colors/crt/src/: CrtApplication.cpp  main.cpp
tasks/02.images_and_colors/crt/src/config/: CrtConfigLoader.cpp
tasks/02.images_and_colors/crt/src/defines/: CrtDefines.cpp
tasks/02.images_and_colors/crt/src/geometry/: PixelRegion.cpp
tasks/02.images_and_colors/crt/src/helpers/: CrtWorkDispatcher.cpp
tasks/02.images_and_colors/crt/src/strategy/: CrtMultipleProducers.cpp  CrtSingleThread.cpp  CrtStrategyFactory.cpp
tasks/02.images_and_colors/shape/: CMakeLists.txt  config.ini
tasks/02.images_and_colors/shape/include/shape/: ShapeApplication.h
tasks/02.images_and_colors/shape/include/shape/config/: ShapeConfig.h  ShapeConfigLoader.h
tasks/02.images_and_colors/shape/include/shape/geometry/: BatmanGeometry.h
tasks/02.images_and_colors/shape/include/shape/geometry/config/: BatmanShapeConfig.h
tasks/02.images_and_colors/shape/include/shape/helpers/: BatmanTaskDispatcher.h  BatmanWorkDispatcher.h
tasks/02.images_and_colors/shape/src/: ShapeApplication.cpp  main.cpp
tasks/02.images_and_colors/shape/src/config/: ShapeConfigLoader.cpp
tasks/02.images_and_colors/shape/src/geometry/: BatmanGeometry.cpp  BatmanWorkDispatcher.cpp
tasks/02.images_and_colors/shape/src/helpers/: BatmanTaskDispatcher.cpp
tasks/03.vectors/: CMakeLists.txt
tasks/03.vectors/rays/: CMakeLists.txt  config.ini
tasks/03.vectors/rays/include/rays/: RaysApplication.h
tasks/03.vectors/rays/include/rays/config/: RaysConfig.h  RaysConfigLoader.h
tasks/03.vectors/rays/include/rays/scene/: RaysScene.h
tasks/03.vectors/rays/src/: RaysApplication.cpp  main.cpp
tasks/03.vectors/rays/src/config/: RaysConfigLoader.cpp
tasks/03.vectors/rays/src/scene/: RaysScene.cpp
tasks/04-05.triangles/: CMakeLists.txt
tasks/04-05.triangles/single_triangle/: CMakeLists.txt  config.ini
tasks/04-05.triangles/single_triangle/include/single_triangle/: SingleTriangleApplication.h
tasks/04-05.triangles/single_triangle/include/single_triangle/config/: SingleTriangleConfig.h  SingleTriangleConfigLoader.h
tasks/04-05.triangles/single_triangle/include/single_triangle/scene/: SingleTriangleScene.h
tasks/04-05.triangles/single_triangle/src/: SingleTriangleApplication.cpp  main.cpp
tasks/04-05.triangles/single_triangle/src/config/: SingleTriangleConfigLoader.cpp
tasks/04-05.triangles/single_triangle/src/scene/: SingleTriangleScene.cpp
